--- a/apps/AdminComposite/Views/Category/List.cshtml
+++ b/apps/AdminComposite/Views/Category/List.cshtml
@@ -22,7 +22,7 @@
 	<table>
 		<thead>
 			<tr>
-				<th><input type="checkbox" class="check-all"/></th>
+				<th>Active</th>
 				<th>Name</th>
 			</tr>
 		</thead>
