--- a/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
+++ b/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
@@ -11,7 +11,7 @@
 		<table>
 			<thead>
 				<tr>
-					<th><input type="checkbox" class="check-all"/></th>
+					<th>Active</th>
 					<th>Name</th>
 				</tr>
 			</thead>
