--- a/apps/AdminComposite/Views/Organization/Index.cshtml
+++ b/apps/AdminComposite/Views/Organization/Index.cshtml
@@ -4,25 +4,39 @@
 	$(document).ready(function () {
 		$("#add-user").click(function () {
 			$("<div></div>")
-				.load("/Organization/GetNewOrganizationUser")
+				.load("/Organization/GetUser")
 				.dialog({
-						modal: true,
-						title: "Add User",
-						width: 650, 
-						height: 800
-					});
+					modal: true,
+					title: "Add User",
+					width: 650,
+					height: 800
+				});
 
 			return false;
 		});
 
-		$("#edit-organization-name").click(function() {
-			$("<div><input type='text' value='" + $("#organization-name").text() + "'><br/><input type='button' id='do-edit-organization' style='float:right' class='button' value='Save' /></div>")
+		$("#organization-details .organization-detail").each(function (index, item) {
+			var inputClass = $(item).attr("id") == "organization-name" ? "organization-name-form" : "";
+			$(item).editable(function (value, settings) {
+				console.log($(this).attr("id") + ".value = " + value);
+
+				return value;
+			}, {
+				tooltip: $(this).attr("data-tooltip"),
+				cssclass: inputClass
+			});
+		});
+
+		$(".edit").click(function () {
+			var organizationId = "11111111-1111-1111-1111-111111111111";
+			$("<div></div>")
+				.load("/Organization/GetUser?organizationId=" + organizationId + "&userId=" + $(this).attr("data-user-id"))
 				.dialog({
 						modal: true,
-						title: "Edit Organization Name",
-						width: 650, 
-						height: 200
-					});
+						title: $(this).attr("data-user-name"),
+						width: 650,
+						height: 800
+			});
 		});
 	});
 
@@ -43,15 +57,42 @@ section
 {
 	margin-bottom: 50px;
 }
+
+.organization-name-form input
+{
+	position:relative;
+	top: -18px;
+}
+
+.organization-detail 
+{
+}
 </style>
 
-<section>
-	<article>
-		<header>
-			<h2 id="organization-name">Detail</h2>
-			<input type="button" class="button-link" value="Edit" id="edit-organization-name" style="float:right"/>
-		</header>
-	</article>
+<section id="organization-details">
+		<article>
+			<header>
+				<h2 id="organization-name" class="organization-detail" data-tooltip="Click to edit">Organization Name</h2>
+			</header>
+		</article>
+
+		<div style="margin-top:29px">
+			<span id="organization-url" class="organization-detail" data-tooltip="Click to edit">Website</span> 
+			<span class="note">(<a href="#" target="_new">launch in new window</a>)</span>
+		</div>
+		
+		<div id="organization-phone" class="organization-detail" data-tooltip="Click to edit">Phone Number</div>
+
+		<div id="organization-address-1" class="organization-detail" data-tooltip="Click to edit">Address</div>
+
+		<div id="organization-address-2" class="organization-detail" data-tooltip="Click to edit">Address 2</div>
+
+		<div id="organization-city" class="organization-detail" data-tooltip="Click to edit">City</div>
+
+		<div id="organization-state" class="organization-detail" data-tooltip="Click to edit">State/Region</div>
+
+		<div id="organization-zip" class="organization-detail" data-tooltip="Click to edit">Zip/Postal Code</div>
+
 </section>
 
 
@@ -59,7 +100,6 @@ section
 	<article>
 		<header>
 			<h2>Administrators</h2>
-			<input type="button" class="button-link" id="add-user" value="Add User" style="float:right"/>
 		</header>
 	</article>
 
@@ -67,29 +107,38 @@ section
 		<table>
 			<thead>
 				<tr>
-					<th>Administrator</th>
 					<th>Name</th>
+					<th>Email</th>
 					<th>Last Login</th>
 					<th>&nbsp;</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
-					<td><input type="checkbox" checked="checked" disabled="disabled"/></td>
 					<td>(You) Theodore Donald "Donny" Kerabtsos</td>
-					<td>Moments ago</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td><input type="checkbox"/></td>
-					<td>Walter Sobchak</td>
+					<td>donny@letsgobowling.com</td>
 					<td>Moments ago</td>
 					<td>
-						<a href="#">Remove</a>
+						<ul class="actions">
+							<li><a class="edit" rel="tooltip" href="#" original-title="Edit" data-user-name="Theodore Donald &quot;Donny&quot; Kerabtsos" data-user-id="22222222-2222-2222-2222-222222222222">Edit</a></li>
+						</ul>
+					</td>
+				</tr>
+				<tr>
+					<td>Walter Sobchak</td>
+					<td>walter@letsgobowling.com</td>
+					<td>Moments ago</td>
+					<td>
+						<ul class="actions">
+							<li><a class="edit" rel="tooltip" href="#" original-title="Edit" data-user-name="Walter Sobchak" data-user-id="33333333-3333-3333-3333-333333333333">Edit</a></li>
+							<li><a class="delete" href="#" rel="tooltip" original-title="Delete Item">Delete</a></li>
+						</ul>
 					</td>
 				</tr>
 			</tbody>
 		</table>
+
+		<a href="#" id="add-user" value="Add User" style="float:right">Add User</a>
 	</div>
 </section>
 
