--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -23,9 +23,6 @@
 	<link href="@Url.Content("~/Content/admin-styles.css")" rel="stylesheet" type="text/css"/>
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic' rel='stylesheet' type='text/css'> 
 	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" >
-	<link href="@Url.Content("~/Content/multiselect/jquery.multiselect.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/multiselect/style.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/multiselect/prettify.css")" rel="stylesheet" type="text/css"/>
 	
 	<script src="http://code.jquery.com/jquery-1.7.min.js" type="text/javascript"> </script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
@@ -40,11 +37,9 @@
 	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.tooltip.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/chromatron/js/jquery/excanvas.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/chromatron/js/script.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/scripts.js")" type="text/javascript"></script>
+	<script src="@Url.Content("~/Content/admin-ui.js")" type="text/javascript"></script>
 	<script src="http://www.appelsiini.net/projects/jeditable/jquery.jeditable.js" type="text/javascript"></script>
 	<script src="http://www.appelsiini.net/projects/viewport/jquery.viewport.js" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/multiselect/prettify.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/multiselect/jquery.multiselect.min.js")" type="text/javascript"></script>
 </head>
 <body>
 	<div>
