--- a/apps/AdminComposite/Views/Shared/_ModeratorPanel.cshtml
+++ b/apps/AdminComposite/Views/Shared/_ModeratorPanel.cshtml
@@ -44,13 +44,18 @@
 	function removeItem(postId) {
 		// TODO: ajax call
 		console.log("removing item: " + postId);
-		$(".last-action[data-post-id='" + postId + "']").text("removed");
+		updateItem(postId, "moderator-removed", "removed");
 	}
 	
 	function approveItem(postId) {
 		// TODO: ajax call
 		console.log("approving item: " + postId);
-		$(".last-action[data-post-id='" + postId + "']").text("approved");
+		updateItem(postId, "moderator-approved", "approved");
+	}
+	
+	function updateItem(postId, itemClass, text) {
+		$(".last-action[data-post-id='" + postId + "']").text(text);
+		$(".moderation-item.unread[data-post-id='" + postId + "']").addClass(itemClass);
 	}
 	
 	function advanceSelection() {
@@ -82,38 +87,37 @@
 		</select>
 	</p>
 </section>
-<section>
-	<p>
-		@{
-			for (var i = 0; i < 15; i++)
-			{
-				var postId = Guid.NewGuid();
-			<fieldset class="moderation-item unread" data-post-id="@postId"><legend>@ViewBag.ModerationType
-				Title</legend>
+<div>
+	<h3>Latest Activity</h3>
+		<ul class="logs">
+		@{ for (var i = 0; i < 15; i++)
+		   {
+		   	var postId = Guid.NewGuid();
+		   	<li class="moderation-item unread" data-post-id="@postId">
+				<div style="float:left;width:450px">
+					<span class="logs-timestamp">post date</span>
+					<h4>@ViewBag.ModerationType Title</h4>
 
-				<div style="float: left; width: 475px">
-					<p>Aliquam placerat posuere neque, at dignissim magna ullamcorper. The Dude abides.
+					<p>
+						Aliquam placerat posuere neque, at dignissim magna ullamcorper. The Dude abides.
 						In aliquam sagittis massa ac tortor ultrices faucibus. Nihilists! Jesus. Can we
 						just rent it from you? Curabitur eu mi sapien, ut ultricies ipsum morbi. I like
 						your style, Dude. Eget risus nulla nullam vel nisi enim, vel. Little Lebowski Urban
 						Achievers, yes, and proud we are of all of them. Auctor ante morbi id urna vel felis
-						lacinia.</p>
+						lacinia.
+					</p>
+
+					<em class="logs-meta">posted by author-name</em>
 				</div>
 
-				<div style="float: left; margin-left: 15px; width: 110px">
-					<input type="button" class="button" value="Approve" />
-					<br />
-					<input type="button" class="button" value="Remove @ViewBag.ModerationType"/>
-					<br />
-					<input type="button" class="button" value="Block Author" />
-					<p style="margin-top:25px" class="note last-action" data-post-id="@postId"></p>
+				<div style="float: left; margin-left: 25px;">
+					<input type="button" class="button-link" value="Approve" style="margin-bottom:15px;display:block"/>
+					<input type="button" class="button-link" value="Remove @ViewBag.ModerationType"  style="margin-bottom:15px;display:block"/>
+					<input type="button" class="button-link" value="Block Author"   style="margin-bottom:15px;display:block"/>
+					<p style="margin-top: 25px" class="note last-action" data-post-id="@postId"></p>
 				</div>
-
-				<div style="clear: both">
-				</div>
-
-			</fieldset>
-			}
+			</li>
+		   } 
 		}
-	</p>
-</section>
+	</ul>
+</div>
