added screen for editing forum content

--- a/apps/AdminComposite/Content/admin-styles.css
+++ b/apps/AdminComposite/Content/admin-styles.css
@@ -27,6 +27,9 @@
 table .actions .moderate { background:url('chromatron/img/icons/icon_notification_attention.png') no-repeat 0 0; }
 table .actions .manage-users { background:url('sample_user_icon.png') no-repeat 0 0; }
 table .actions .settings { background:url('chromatron/img/icons/icon_nav_settings.png') no-repeat 0 0; }
+table .actions .preview { background:url('chromatron/img/icons/icon_nav_gallery.png') no-repeat 0 0; }
+
+
 .moderator-approved {
 	background-position:10px 8px;
 	background-repeat:no-repeat;
