--- a/apps/AdminComposite/Views/Category/List.cshtml
+++ b/apps/AdminComposite/Views/Category/List.cshtml
@@ -16,7 +16,6 @@
 <article>
 	<header>
 		<h2>Manage Forum Categories</h2>
-		<input type="button" id="create-category" class="button-link" value="New Category" style="float: right" />
 	</header>
 	<p>Lorem ipsum dolor sit consecutator amet. </p>
 	<table>
@@ -24,25 +23,48 @@
 			<tr>
 				<th>Active</th>
 				<th>Name</th>
+				<th></th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
 				<td><input type="checkbox"/></td>
 				<td>Category 1</td>
+				<td>
+					<ul class="actions">
+						<li><a href="#" class="edit" rel="tooltip" original-title="Edit Category">edit category</a></li>
+					</ul>
+				</td>
 			</tr>
 			<tr>
 				<td><input type="checkbox"/></td>
 				<td>Category 2</td>
+				<td>
+					<ul class="actions">
+						<li><a href="#" class="edit" rel="tooltip" original-title="Edit Category">edit category</a></li>
+					</ul>
+				</td>
 			</tr>
 			<tr>
 				<td><input type="checkbox"/></td>
 				<td>Category 3</td>
+				<td>
+					<ul class="actions">
+						<li><a href="#" class="edit" rel="tooltip" original-title="Edit Category">edit category</a></li>
+					</ul>
+				</td>
 			</tr>
 			<tr>
 				<td><input type="checkbox"/></td>
 				<td>Category 4</td>
+				<td>
+					<ul class="actions">
+						<li><a href="#" class="edit" rel="tooltip" original-title="Edit Category">edit category</a></li>
+					</ul>
+				</td>
 			</tr>
 		</tbody>
 	</table>
+
+	<a href="#" id="create-category" style="float: right">New Category</a>
 </article>
