--- a/apps/AdminComposite/Views/Dashboard/Index.cshtml
+++ b/apps/AdminComposite/Views/Dashboard/Index.cshtml
@@ -9,6 +9,61 @@
 </article>
 
 <section>
+		<h3>User Activity</h3>
+		<table class="data" data-chart="line">
+			<thead>
+				<tr>
+					<td></td>
+					<th scope="col">12/12/2011</th>
+					<th scope="col">12/12/2011</th>
+					<th scope="col">12/12/2011</th>
+					<th scope="col">12/12/2011</th>
+					<th scope="col">Yesterday</th>
+					<th scope="col">Today</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th scope="row">Posts</th>
+					<td>190</td>
+					<td>160</td>
+					<td>40</td>
+					<td>120</td>
+					<td>30</td>
+					<td>70</td>
+				</tr>
+				<tr>
+					<th scope="row">Comments</th>
+					<td>3</td>
+					<td>40</td>
+					<td>30</td>
+					<td>45</td>
+					<td>35</td>
+					<td>49</td>
+				</tr>
+				<tr>
+					<th scope="row">Upvotes</th>
+					<td>10</td>
+					<td>180</td>
+					<td>10</td>
+					<td>85</td>
+					<td>25</td>
+					<td>79</td>
+				</tr>
+				<tr>
+					<th scope="row">Downvotes</th>
+					<td>40</td>
+					<td>80</td>
+					<td>90</td>
+					<td>25</td>
+					<td>15</td>
+					<td>119</td>
+				</tr>
+			</tbody>
+		</table>
+</section>
+
+<section>
 	<fieldset>
 		<legend>Today's Stats</legend>
 
@@ -37,6 +92,3 @@
 	</fieldset>
 </section>
 
-<section>&nbsp;</section>
-
-@{Html.RenderPartial("_MyForums");}
