--- a/apps/AdminComposite/Views/Organization/Index.cshtml
+++ b/apps/AdminComposite/Views/Organization/Index.cshtml
@@ -130,7 +130,7 @@ section
 				<td>
 					<ul class="actions">
 						<li><a class="edit" rel="tooltip" href="#" original-title="Edit" data-user-name="Walter Sobchak" data-user-id="33333333-3333-3333-3333-333333333333">Edit</a></li>
-						<li><a class="delete" href="#" rel="tooltip" original-title="Delete Item">Delete</a></li>
+						<li><a class="admin-delete" href="#" rel="tooltip" original-title="Delete Walter Sobchak">Delete</a></li>
 					</ul>
 				</td>
 			</tr>
