--- a/apps/AdminComposite/Views/Content/ForForum.cshtml
+++ b/apps/AdminComposite/Views/Content/ForForum.cshtml
@@ -40,7 +40,7 @@
 				<td>
 					<ul class="actions">
 						<li><a class="edit" rel="tooltip" href="#" original-title="Edit">Edit</a></li>
-						<li><a class="delete" href="#" rel="tooltip" original-title="Delete">Delete</a></li>
+						<li><a class="admin-delete" href="#" rel="tooltip" original-title="Delete">Delete</a></li>
 						<li><a class="preview" href="#" rel="tooltip" original-title="Preview">Delete</a></li>
 					</ul>
 				</td>
@@ -52,7 +52,7 @@
 				<td>
 					<ul class="actions">
 						<li><a class="edit" rel="tooltip" href="#" original-title="Edit">Edit</a></li>
-						<li><a class="delete" href="#" rel="tooltip" original-title="Delete">Delete</a></li>
+						<li><a class="admin-delete" href="#" rel="tooltip" original-title="Delete">Delete</a></li>
 						<li><a class="preview" href="#" rel="tooltip" original-title="Preview">Delete</a></li>
 					</ul>
 				</td>
