move graph inot fieldset

--- a/apps/AdminComposite/Views/Dashboard/Index.cshtml
+++ b/apps/AdminComposite/Views/Dashboard/Index.cshtml
@@ -9,7 +9,9 @@
 </article>
 
 <section>
-		<h3>User Activity</h3>
+	<fieldset>
+		<legend>User Activity</legend>
+
 		<table class="data" data-chart="line">
 			<thead>
 				<tr>
@@ -61,6 +63,7 @@
 				</tr>
 			</tbody>
 		</table>
+	</fieldset>
 </section>
 
 <section>
