tweak the moderation page

--- a/apps/AdminComposite/Views/Shared/_ModeratorPanel.cshtml
+++ b/apps/AdminComposite/Views/Shared/_ModeratorPanel.cshtml
@@ -94,7 +94,7 @@
 		   {
 		   	var postId = Guid.NewGuid();
 		   	<li class="moderation-item unread" data-post-id="@postId">
-				<div style="float:left;width:450px">
+				<div style="float:left;width:90%">
 					<span class="logs-timestamp">post date</span>
 					<h4>@ViewBag.ModerationType Title</h4>
 
