--- a/apps/AdminComposite/Views/Forum/Settings.cshtml
+++ b/apps/AdminComposite/Views/Forum/Settings.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using AdminComposite.Models
+@{
 	ViewBag.Title = "Forum Details";
 }
 
@@ -7,7 +8,9 @@
 		<header>
 			<h2>@ViewBag.Title</h2>
 		</header>
-		<div class="sidetabs">
+	</article>
+	<section>
+			<div class="sidetabs">
 			<nav class="sidetab-switch">
 				<ul>
 					<li><a href="#test" class="default-sidetab current">Test</a></li>
@@ -15,22 +18,17 @@
 				</ul>
 			</nav>
 
+			
 			<div id="test" class="sidetab default-sidetab">
-				Items from the new forum modal go here. This is the version of them used for the test site.
-				<br />
-				<br />
-				<br />
+				@{Html.RenderPartial("_ForumDetails");}
 				<input type="button" class="button" value="Copy to Production" />
 			</div>
 
 			<div id="production" class="sidetab" style="display: none">
-				Items from the new forum modal go here. This is the version of them used for the production site.
-				<br />
-				<br />
-				<br />
+				@{Html.RenderPartial("_ForumDetails");}
 				<input type="button" class="button" value="Copy to Test" />
 			</div>
 		</div>
-	</article>
+	</section>
 </div>
 
