--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
 	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.tooltip.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/chromatron/js/jquery/excanvas.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.fullcalendar.min.js")" type="text/javascript"></script>
 	<script src="@Url.Content("~/Content/chromatron/js/script.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/admin-ui.js")" type="text/javascript"></script>
 	<script src="http://www.appelsiini.net/projects/jeditable/jquery.jeditable.js" type="text/javascript"></script>
