--- a/apps/AdminComposite/Views/Content/ForForum.cshtml
+++ b/apps/AdminComposite/Views/Content/ForForum.cshtml
@@ -15,7 +15,10 @@
 			return false;
 		});
 	});
-
+	
+	function deleteContent(contentId) {
+		alert("deleting: " + contentId);
+	}
 </script>
 
 <article>
@@ -40,7 +43,7 @@
 				<td>
 					<ul class="actions">
 						<li><a class="edit" rel="tooltip" href="#" original-title="Edit">Edit</a></li>
-						<li><a class="admin-delete" href="#" rel="tooltip" original-title="Delete">Delete</a></li>
+						<li><a class="admin-delete" href="#" rel="tooltip" original-title="Delete" data-confirmation-message="Do you want to delete this content?" data-delete-function="deleteContent" data-item-id="11111111-1111-1111-1111-111111111111">Delete</a></li>
 						<li><a class="preview" href="#" rel="tooltip" original-title="Preview">Delete</a></li>
 					</ul>
 				</td>
@@ -52,7 +55,7 @@
 				<td>
 					<ul class="actions">
 						<li><a class="edit" rel="tooltip" href="#" original-title="Edit">Edit</a></li>
-						<li><a class="admin-delete" href="#" rel="tooltip" original-title="Delete">Delete</a></li>
+						<li><a class="admin-delete" href="#" rel="tooltip" original-title="Delete" data-confirmation-message="Do you want to delete this content?" data-delete-function="deleteContent" data-item-id="22222222-2222-2222-2222-222222222222">Delete</a></li>
 						<li><a class="preview" href="#" rel="tooltip" original-title="Preview">Delete</a></li>
 					</ul>
 				</td>
