--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 
 	<link rel="shortcut icon" href="@Url.Content("~/Content/chromatron/img/favicon.ico")">
 	<link rel="apple-touch-icon" href="@Url.Content("~/Content/chromatron/img/apple-touch-icon.png")">
+
 	<link href="@Url.Content("~/Content/chromatron/css/style.css")" rel="stylesheet" type="text/css"/>
 	<link href="@Url.Content("~/Content/chromatron/css/colors.css")" rel="stylesheet" type="text/css"/>
 	<link href="@Url.Content("~/Content/chromatron/css/jquery.datatables.css")" rel="stylesheet" type="text/css"/>
@@ -21,12 +22,13 @@
 	<link href="@Url.Content("~/Content/chromatron/css/jquery.visualize.css")" rel="stylesheet" type="text/css"/>
 	<link href="@Url.Content("~/Content/chromatron/css/jquery.wysiwyg.css")" rel="stylesheet" type="text/css"/>
 	<link href="@Url.Content("~/Content/admin-styles.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/jquery.simplemodal.1.4.1.css")" rel="stylesheet" type="text/css"/>
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic' rel='stylesheet' type='text/css'> 
 	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" >
 	
-	<script src="http://code.jquery.com/jquery-1.7.min.js" type="text/javascript"> </script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"> </script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/chromatron/js/libs/selectivizr.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.fullcalendar.min.js")" type="text/javascript"></script>
 	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.facebox.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.tipsy.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.wysiwyg.js")" type="text/javascript"> </script>
@@ -36,9 +38,11 @@
 	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.tooltip.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/chromatron/js/jquery/excanvas.js")" type="text/javascript"> </script>
-	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.fullcalendar.min.js")" type="text/javascript"></script>
+	<script src="@Url.Content("~/Content/chromatron/js/libs/selectivizr.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/chromatron/js/script.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/admin-ui.js")" type="text/javascript"></script>
+	<script src="@Url.Content("~/Content/jquery.simplemodal.1.4.1.min.js")" type="text/javascript"></script>
+	<script src="@Url.Content("~/Content/jquery.url-encode.js")" type="text/javascript"></script>
 	<script src="http://www.appelsiini.net/projects/jeditable/jquery.jeditable.js" type="text/javascript"></script>
 	<script src="http://www.appelsiini.net/projects/viewport/jquery.viewport.js" type="text/javascript"></script>
 </head>
