--- a/apps/AdminComposite/Views/User/List.cshtml
+++ b/apps/AdminComposite/Views/User/List.cshtml
@@ -34,7 +34,7 @@
 					<td>11/01/11</td>
 					<td>
 						<ul class="actions">
-							<li><a href="#" class="block-user" rel="tooltip" original-title="Block Jeff Dowd">Block User</a></li>
+							<li><a href="#" class="block-user" rel="tooltip" original-title="Block Jeff Dowd" data-item-id="11111111-1111-1111-1111-111111111111" data-confirmation-message="Really Block Jeff Dowd?" data-confirm-function="blockUser">Block User</a></li>
 							<li><a href="#" class="view" rel="tooltip" original-title="View Forum">@Url.Action("Settings", "Forum", new {forumId})</a></li>
 						</ul>
 					</td>
@@ -52,7 +52,7 @@
 					<td>10/01/11</td>
 					<td>
 						<ul class="actions">
-							<li><a href="#" class="block-user" rel="tooltip" original-title="Block Peter Exline">Block User</a></li>
+							<li><a href="#" class="block-user" rel="tooltip" original-title="Block Peter Exline" data-item-id="22222222-2222-2222-2222-222222222222" data-confirmation-message="Really Block Peter Exline?" data-confirm-function="blockUser">Block User</a></li>
 							<li><a href="#" class="view" rel="tooltip" original-title="View Forum">@Url.Action("Settings", "Forum", new {forumId})</a></li>
 						</ul>
 					</td>
@@ -70,7 +70,7 @@
 					<td>09/01/11</td>
 					<td>
 						<ul class="actions">
-							<li><a href="#" class="block-user" rel="tooltip" original-title="Block Walter Hill">Block User</a></li>
+							<li><a href="#" class="block-user" rel="tooltip" original-title="Block Walter Hill" data-item-id="44444444-4444-4444-4444-444444444444" data-confirmation-message="Really Block Walter Hill?" data-confirm-function="blockUser">Block User</a></li>
 							<li><a href="#" class="view" rel="tooltip" original-title="View Forum">@Url.Action("Settings", "Forum", new {forumId})</a></li>
 						</ul>
 					</td>
